// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableOfContent component renders anchor correctly without the context  1`] = `
<div>
  <div
    id="div with text"
    style="margin-top: -150px; padding-top: 150px;"
  >
    <h2>
      section with text
    </h2>
    <p>
      Lorem ipsum dolor sit amet.
    </p>
  </div>
</div>
`;

exports[`TableOfContent component renders correctly 1`] = `
<div>
  <div
    class="TOC-root-1"
  >
    <div>
      <div
        class="TOC-link-2"
      >
        <a
          class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-4 Anchorlink MuiTypography-colorPrimary"
          href="#div-with-text"
        >
          <span>
            div with text
          </span>
        </a>
      </div>
      <div
        class="TOC-link-2"
      >
        <a
          class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-4 Anchorlink MuiTypography-colorPrimary"
          href="#div-with-single-paragraph"
        >
          <span>
            div with single paragraph
          </span>
        </a>
      </div>
    </div>
    <div
      id="div-with-text"
      style="margin-top: -150px; padding-top: 150px;"
    >
      <h2>
        section with text
      </h2>
      <p>
        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem, enim.
      </p>
    </div>
    <div
      id="div-with-single-paragraph"
      style="margin-top: -150px; padding-top: 150px;"
    >
      <h2>
        section with single paragraph
      </h2>
      <p>
        Lorem ipsum dolor sit, amet consectetur adipisicing.
      </p>
    </div>
  </div>
</div>
`;
